--- a/src/WordCloud/WordCloud.scss
+++ b/src/WordCloud/WordCloud.scss
@@ -7,7 +7,7 @@
 
 
 .word-point__text {
-  alignment-baseline: hanging;
+  // alignment-baseline: hanging;
 
   fill: $cyan-50;
   font-weight: bold; 
