--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -104,4 +104,5 @@ $black: #000000;
 
 
 /* component specific imports */
+@import '../ResponseChain/ResponseChain.scss';
 @import '../WordCloud/WordCloud.scss';
